
2003-12-17	Joel Becker <joel.becker@oracle.com>

	* libasm/asmlib.c: OSM -> ASM rename.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* lib{osm,asm}: Move libosm to libasm.
	* Makefile: Move libosm to libasm.
	* libasm/Makefile: Move libosm to libasm.

2003-12-17	Joel Becker <joel.becker@oracle.com>

	* include/{osm,asm}lib.h: Move osmlib.h -> asmlib.h
	* tools/asmscan.c: Finds disks.
	* tools/asmtool.c: Error return.
	* include/linux/asmmanager.h: Allow asm_disk_path() to handle
		the raw disk directory.

2003-12-11	Joel Becker <joel.becker@oracle.com>

	* configure.in: Add userspace spec on redhat.
	* vendor/redhat/oracleasm-userspace.spec.in: Added.

2003-12-11	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Fix a couple info stdouts.
	* vendor/common/oracleasm.init.functions: create/delete disk
		stuff.
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: New createdisk,
		deletedisk, querydisk, listdisks commands.

2003-12-11	Joel Becker <joel.becker@oracle.com>

	* documentation/asm-install.txt: New create/delete/scan docs.

2003-12-11	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: New query code.  Ugly, but enough.

2003-12-10	Joel Becker <joel.becker@oracle.com>

	* libosm/asmlib.c: Added manager code, and handle new
		discovery strings.
	* include/linux/asmmanager.h: Add asm_manage_path().
	* kernel/oracleasm.c: New kernel driver filesystem structure.

2003-12-10	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Use asmmanager.h.
	* include/linux/asmdisk.h: Comment tweak.
	* include/linux/asmmanager.h: Added.
	* include/linux/Makefile: Add asmmanager.h.

2003-12-10	Joel Becker <joel.becker@oracle.com>

	* tools/asmtool.c: Create and Delete seem to work.

2003-12-08	Joel Becker <joel.becker@oracle.com>

	* documents/asm-install.txt: Newer oracleasm plans.
	* tools/asmtool.c: Started towards true ASM disks.
	* tools/list.h: list_head for asmtool.
	* vendors/common/oracleasm.init.functions: some tweaks.
