@@ -31,7 +31,7 @@
 
 #include <linux/types.h>
 #include "oratypes.h"
-#include "osmlib.h"
+#include "asmlib.h"
 #include "linux/asmdisk.h"
 #include "linux/asmmanager.h"
 
